# CLIMP

./: .gitignore  Cargo.toml  Readme.md  makefile
src/: main.rs
src/ascii/: charsets.rs  core.rs  image_renderer.rs  mod.rs  renderer.rs
src/commands/: arg_matcher.rs  args.rs  command_creator.rs  command_maker.rs  command_matcher.rs  flag_matcher.rs  interactive_matcher.rs  methods.rs  mod.rs
tests/: tests.py
