[package]
name = "cli-image-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
clap = { version = "4.3.19", features = ["derive", "wrap_help", "unstable-doc"] }
dialoguer = "0.10.4"
indicatif = "0.17.5"
dotenv = {version = "0.15.0", features = ["clap"]}
ansi_term = "0.12.1"
unicode-segmentation = "1.10.1"
